# KappaTools

./: .editorconfig  .gitattributes  .gitignore  .merlin  .ocamldebug  .ocamlformat  .paths  .project  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES  CHANGES.md  ESSAI.txt  KaSim  KaSim.install  KaSim.odocl  KappaLib.mllib  LOG  MANIFEST.in  META.skel  Makefile  OCamlMakefile  README  README.md  _tags  bin  data.csv  download_dependencies.sh  dune  dune-project  external_deps_versions.mk  externals.mk  kappa-agents.opam  kappa-agents.opam.locked  kappa-binaries.opam  kappa-binaries.opam.locked  kappa-binaries.opam.template  kappa-library.opam  kappa-library.opam.locked  (+14 more)
KaSa_rep/: dune
KaSa_rep/automatically_generated/: git_commit_info.ml
KaSa_rep/backend/: binding_type.ml  binding_type.mli  ckappa_backend.ml  ckappa_backend.mli  ckappa_site_graph.ml  ckappa_site_graph.mli  dune  kasa_site_graph.mli
KaSa_rep/config/: config.ml  headers.ml  loggers.ml  loggers.mli  remanent_parameters.ml  remanent_parameters.mli  remanent_parameters_sig.ml  symbol_table.ml  symbol_table.mli
KaSa_rep/contact_map_scc/: contact_map_scc.ml  contact_map_scc.mli
KaSa_rep/counting_enumerating_species/: counting_test.ml  dune
KaSa_rep/counting_enumeration/: counting_algebrae.ml  counting_engine.ml  counting_print.ml  counting_test.ml
KaSa_rep/data_structures/: buffers.ml  circular_buffers.ml  circular_buffers.mli  dictionary.ml  fifo.ml  graphs.ml  graphs.mli  hash.ml  indexed_objects.ml  infinite_buffers.ml  infinite_buffers.mli  int_inf.ml  int_storage.ml  int_storage.mli  linear_combination.ml  map_test.ml  map_wrapper.ml  map_wrapper.mli  parameters.ml  set_and_map.ml  union_find.ml  working_list.ml  wrapped_modules.ml
KaSa_rep/error_handlers/: exception.ml  exception.mli  exception_without_parameter.ml  exception_without_parameter.mli  (+1 more)
QA/: LOG  (+2 more)
agents/: KaMoHa.ml  KaSaAgent.ml  KaSimAgent.ml  KaStor.ml  KappaSwitchman.ml  agent_args.ml  agent_common.ml  agent_common.mli  agents_client.ml  app_args.ml  dune
cflow/: KaStor.ml  black_list.ml  black_list.mli  blackboard.ml  blackboard_generation.ml  causal.ml  causal.mli  cflow_handler.ml  cflow_handler.mli  cflow_js_interface.ml  cflow_js_interface.mli  compression_main.ml  compression_main.mli  dag.ml  dag.mli  dag2.ml  dag_with_bucket_sort.ml  dune  generic_branch_and_cut_solver.ml  generic_branch_and_cut_solver.mli  graph_closure.ml  kappa_instantiation.ml  kastor_mpi.ml  kastor_mpi.mli  known_bugs.txt  po_cut.ml  predicate_maps.ml  priority.ml  priority.mli  profiling.ml  propagation_heuristics.ml  pseudo_inverse.ml  storyProfiling.ml  story_json.ml  story_json.mli  tick_stories.ml  todo.txt  utilities.ml  utilities.mli  utilities_expert.ml
cli/: agent_args.ml  cli_init.ml  cli_init.mli  common_args.ml  common_args.mli  dune  kappa_files.ml  kappa_files.mli  kasim_args.ml  outputs.ml  outputs.mli  parameter.ml  pp_svg.ml  pp_svg.mli  progress_report.ml  progress_report.mli  run_cli_args.ml  superarg.ml  superargTk_tk.ml
gui/: Info.plist.skel  JsNode.ml  JsNode.mli  JsSim.ml  KaMoHaWorker.ml  KaSaWorker.ml  KaSimWorker.ml  KaStorWorker.ml  README.md  codemirror.ml  common.ml  common.mli  common_state.ml  common_state.mli  dune  dune_js_of_ocaml_flags.inc  hooked.ml  hooked.mli  js_contact.ml  js_flux.ml  js_graphlogger.ml  js_plot.ml  js_snapshot.ml  js_story.ml  menu_editor_file.ml  menu_editor_file.mli  menu_editor_file_controller.ml  modal_preferences.ml  package.json  panel_projects.ml  panel_projects_controller.ml  panel_projects_controller.mli  panel_settings.ml  panel_settings_controller.ml  panel_settings_controller.mli  panel_tab.ml  panel_tab.mli  rest_api.ml  runtime_processes.mli  runtime_web_workers.ml  (+45 more)
js/: .merlin  JaSim.css  JaSim.ml  JsNode.ml  JsRemote.ml  JsRemote.mli  JsSim.css  JsSim.ml  JsWorker.ml  JsWorker.mli  KaMoHaWorker.ml  KaSaWorker.ml  KaSimWorker.ml  KaStorWorker.ml  Kappa.js  MessageWorker.ml  README.md  TestJsSim.ml  UIState.ml  WebMessage.atd  WebWorker.ml  WebWorkerV1.ml  ace.ml  ace.mli  api_types.ml  code.ml  codemirror.ml  codemirror.mli  common.js  common.ml  common.mli  common_state.ml  common_state.mli  configurationPanel.ml  contactmap.js  contactmap.ml  display_common.ml  dune  feedback.ml  feedback.mli  (+121 more)
main/: KaSim.ml  cli_init.ml  cli_init.mli  dune  kappa_files.ml  kappa_files.mli  kasim_args.ml  main.ml  outputs.ml  outputs.mli  parameter.ml  pp_svg.ml  pp_svg.mli  version.ml.skel
odes/: KaDE.ml  affine_combinations.mli  dummy_interface.ml  dummy_interface.mli  dune  kade_backend.ml  kade_backend.mli  lin_comb.ml  lin_comb.mli  ode_args.ml  ode_interface.ml  ode_interface.mli  ode_interface_sig.mli  ode_loggers.ml  ode_loggers_sig.ml  odes.ml  odes.mli  rule_modes.ml  rule_modes.mli  sbml_backend.ml
simulation/: #rule_interpreter.ml#  b3.ml  counter.ml  counter.mli  data.ml  data.mli  domain.ml  dune  evaluator.ml  evaluator.mli  expr_interpreter.ml  expr_interpreter.mli  external.ml  fluxmap.ml  fluxmap.mli  generic_rule_interpreter.ml  generic_rule_interpreter.mli  instances.ml  instances.mli  instances_sig.ml  instances_sig.mli  instances_sig_old.ml  nonLocal.ml  outputs.ml  outputs.mli  plot.ml  plot.mli  replay.ml  replay.mli  roots.ml  roots.mli  rule_interpreter.ml  rule_interpreter.mli  run.ml  snapshot.ml  snapshot.mli  state.ml  state.mli  state_interpreter.ml  state_interpreter.mli  (+3 more)
symmetries/: affine_combinations.ml  dune  kade_backend.ml  lKappa_auto.ml  lKappa_auto.mli  lKappa_group_action.mli  pattern_group_action.ml  pattern_group_action.mli  patterns_extra.ml  patterns_extra.mli  symmetries.ml  symmetries.mli  symmetries_sig.mli  symmetry_interface.ml  symmetry_interface.mli  symmetry_interface_sig.ml  symmetry_interface_sig.mli
webapp/: .merlin  StdSim.ml  TestWebSim.ml  WebSim.json  WebSim.ml  WebSim.yaml  api_runtime.ml  api_types.atd  app_args.ml  dune  route_root.ml  route_root.mli  route_sessions.ml  route_sessions.mli  server_stdio.ml  server_stdio.mli  stdsim_args.ml  test_webapp_common.ml  webapp.ml  webapp_common.ml  webapp_v1.ml  websim_args.ml
(+10588 files in other folders)
