opam-version: "2.0"
synopsis: "Command line interfaces of the Kappa tool suite"
version: "4.1~dev"
maintainer: "Pierre Boutillier <pierre.boutillier@laposte.net>"
authors: [
  "Jean Krivine" "Jérôme Feret" "Pierre Boutillier"
  "Ioana Cristescu" "Mutaamba Maasha" "Lý Kim Quyên"
]
license: "LGPL-3.0"
homepage: "https://kappalanguage.org/"
bug-reports: "https://github.com/Kappa-Dev/KaSim/issues"
dev-repo: "git+https://github.com/Kappa-Dev/KaSim.git"

depends : [
  "ocaml" { >= "4.04.0" }
  "num"
  "re"
  "dune"
  "yojson" { >= "1.6.0" }
  "lwt" { >= "4.2.0" }
  "fmt"
  "logs"
  "decompress"
  "kappa-library"
]

depopts: [
  "labltk"
]

build: ["dune" "build" "-p" name "-j" jobs]

run-test: [ make "check" ]
