(library
  (name kappa_cflow)
  (libraries yojson result
    kappa_runtime kappa_cli kappa_logging kappa_profiling kappa_errors kappa_kasa_kastor_toolset kappa_parameters)
  (flags (:standard
    -open Kappa_generic_toolset
    -open Kappa_mixtures
    -open Kappa_terms
    -open Kappa_runtime
    -open Kappa_cli
    -open Kappa_logging
    -open Kappa_profiling
    -open Kappa_errors
    -open Kappa_kasa_kastor_toolset
    -open Kappa_parameters)))
