(library
  (name kappa_cli)
  (libraries lwt
  	     (select superargTk.ml from
	       (labltk.jpf -> superargTk_tk.ml)
	       ( -> superargTk_notk.ml))
	     kappa_grammar
  	     kappa-library.runtime kappa_version)
  (modules (:standard \ superargTk_tk superargTk_notk))
  (flags (:standard -w @a
     -open Kappa_version
  	 -open Kappa_generic_toolset
	   -open Kappa_mixtures
     -open Kappa_terms
  	 -open Kappa_grammar
  	 -open Kappa_runtime)))
