(library
 (name kappa_js_lib)
 (modules Common)
 (libraries js_of_ocaml-lwt)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags :standard -w +a -open Js_of_ocaml))

(executable
 (name KaSimWorker)
 (modes js)
 (js_of_ocaml (flags :standard --disable globaldeadcode --disable deadcode))
 (modules KaSimWorker)
 (libraries kappa_js_lib kappa_json_api)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags
  :standard
  -w
  +a
  -open
  Js_of_ocaml
  -open
  Kappa_js_lib
  -open
  Kappa_json_api))

(executable
 (name KaSaWorker)
 (modes js)
 (js_of_ocaml (flags :standard --disable globaldeadcode --disable deadcode))
 (modules KaSaWorker)
 (libraries kappa_js_lib kappa_kasa_export)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags
  :standard
  -w
  +a
  -open
  Js_of_ocaml
  -open
  Kappa_js_lib
  -open
  Kappa_kasa_export))

(executable
 (name KaStorWorker)
 (modes js)
 (js_of_ocaml (flags :standard --disable globaldeadcode --disable deadcode))
 (modules KaStorWorker)
 (libraries kappa_js_lib kappa_cflow)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags
  :standard
  -w
  +a
  -open
  Js_of_ocaml
  -open
  Kappa_js_lib
  -open
  Kappa_cflow))

(executable
 (name KaMoHaWorker)
 (modes js)
 (js_of_ocaml (flags :standard --disable globaldeadcode --disable deadcode))
 (modules KaMoHaWorker)
 (libraries kappa_js_lib kappa_grammar)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags :standard -w +a))

(executable
 (name JsSim)
 (modes js)
 (js_of_ocaml (flags :standard --disable globaldeadcode --disable deadcode))
 (modules
  :standard
  \
  Common
  KaSimWorker
  KaSaWorker
  KaStorWorker
  KaMoHaWorker)
 (libraries
  js_of_ocaml-tyxml
  lwt_react
  kappa_js_lib
  kappa_json_api
  kappa_parameters)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags
  :standard
  -w
  +a
  -open
  Js_of_ocaml
  -open
  Js_of_ocaml_tyxml
  -open
  Kappa_js_lib
  -open
  Kappa_json_api
  -open
  Kappa_generic_toolset
  -open
  Kappa_terms
  -open
  Kappa_grammar
  -open
  Kappa_runtime
  -open
  Kappa_errors
  -open
  Kappa_kasa_type_interface
  -open
  Kappa_parameters
  -open
  Kappa_classical_graphs
  -open
  Kappa_logging
  -open
  Kappa_cflow
  )
 )
