(library
 (name kappa_js_lib)
 (public_name kappa-webapp.kappa_js_lib)
 (modules Common Hooked)
 (libraries js_of_ocaml-lwt lwt_react)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags :standard -w +a -open Js_of_ocaml))

(rule
 (with-stdout-to
  js_of_ocaml_flags
  (echo "(:standard --disable globaldeadcode --disable deadcode)")))

(executable
 (name KaSimWorker)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js_of_ocaml_flags)))
 (modules KaSimWorker)
 (libraries kappa_js_lib kappa_json_api)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags
  :standard
  -w
  +a
  -open
  Js_of_ocaml
  -open
  Kappa_js_lib
  -open
  Kappa_json_api))

(executable
 (name KaSaWorker)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js_of_ocaml_flags)))
 (modules KaSaWorker)
 (libraries kappa_js_lib kappa_kasa_export)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags
  :standard
  -w
  +a
  -open
  Js_of_ocaml
  -open
  Kappa_js_lib
  -open
  Kappa_kasa_export))

(executable
 (name KaStorWorker)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js_of_ocaml_flags)))
 (modules KaStorWorker)
 (libraries kappa_js_lib kappa_cflow)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags
  :standard
  -w
  +a
  -open
  Js_of_ocaml
  -open
  Kappa_js_lib
  -open
  Kappa_cflow))

(executable
 (name KaMoHaWorker)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js_of_ocaml_flags)))
 (modules KaMoHaWorker)
 (libraries kappa_js_lib kappa_grammar)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags :standard -w +a))

(executable
 (name JsSim)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js_of_ocaml_flags)))
 (modules
  :standard
  \
  Common
  Hooked
  KaSimWorker
  KaSaWorker
  KaStorWorker
  KaMoHaWorker)
 (libraries
  js_of_ocaml-tyxml
  lwt_react
  kappa_js_lib
  kappa_json_api
  kappa_parameters)
 (preprocess
  (pps js_of_ocaml-ppx tyxml-ppx))
 (flags
  :standard
  -w
  @a-7-70
  -open
  Js_of_ocaml
  -open
  Js_of_ocaml_tyxml
  -open
  Kappa_js_lib
  -open
  Kappa_json_api
  -open
  Kappa_data_structures
  -open
  Kappa_terms
  -open
  Kappa_grammar
  -open
  Kappa_runtime
  -open
  Kappa_errors
  -open
  Kappa_kasa_type_interface
  -open
  Kappa_parameters
  -open
  Kappa_classical_graphs
  -open
  Kappa_logging
  -open
  Kappa_cflow))
