(executable
  (name KaSim)
  (libraries lwt fmt num yojson
  	     kappa_version kappa_generic_toolset kappa_mixtures kappa_terms kappa_runtime
	     kappa_grammar kappa_cli)
(flags (:standard -w @a
  -open Kappa_version
	-open Kappa_generic_toolset
	-open Kappa_mixtures
	-open Kappa_terms
	-open Kappa_runtime
	-open Kappa_grammar
	-open Kappa_cli)))
