(library
 (name kappa_cflow)
 (libraries
  yojson
  result
  kappa_profiling
  kappa_kasa_kastor_toolset
  kappa_classical_graphs)
 (flags
  (:standard
   -open
   Kappa_generic_toolset
   -open
   Kappa_mixtures
   -open
   Kappa_terms
   -open
   Kappa_runtime
   -open
   Kappa_cli
   -open
   Kappa_logging
   -open
   Kappa_profiling
   -open
   Kappa_errors
   -open
   Kappa_kasa_kastor_toolset
   -open
   Kappa_parameters
   -open
   Kappa_classical_graphs)))
