(library
 (name kappa_cli)
 (libraries
  unix
  lwt
  (select
   superargTk.ml
   from
   (labltk.jpf -> superargTk.tk.ml)
   (-> superargTk.notk.ml))
  kappa_utils
  kappa_grammar
  kappa-library.runtime
  kappa_version)
 (flags
  (:standard
   -w
   @a-40-42
   -open
   Kappa_version
   -open
   Kappa_utils
   -open
   Kappa_data_structures
   -open
   Kappa_site_graphs
   -open
   Kappa_terms
   -open
   Kappa_grammar
   -open
   Kappa_runtime
   )))
