(library
 (name kappa_grammar)
 (libraries yojson result lwt kappa-library.generic kappa-library.runtime)
 (flags
  (:standard
   -w
   @a-40-42
   -open
   Kappa_data_structures
   -open
   Kappa_site_graphs
   -open
   Kappa_terms
   -open
   Kappa_runtime)))

(ocamlyacc kparser4 kappaParser)

(ocamllex klexer4 kappaLexer)
