(library
 (name kappa_parameters)
 (libraries
  yojson
  result
  kappa_version
  kappa_cli
  kappa_utils
  kappa-library.generic
  kappa_classical_graphs)
 (flags
  (:standard)
  -open
  Kappa_utils
  -open
  Kappa_cli
  -open
  Kappa_version
  -open
  Kappa_grammar
  -open
  Kappa_data_structures
  -open
  Kappa_logging
  -open
  Kappa_classical_graphs))
