(library
 (name kappa_runtime)
 (libraries kappa_terms)
 (public_name kappa-library.runtime)
 (flags
  (:standard
   -w
   @a
   -open
   Kappa_generic_toolset
   -open
   Kappa_mixtures
   -open
   Kappa_terms)))

(rule
 (targets resource_strings.ml)
 (deps ../../dev/generate-string.sh ../../shared/flux.js ../../viz/common.js)
 (action
  (with-stdout-to
   %{targets}
   (run ocaml %{deps}))))
