(library
 (name kappa_runtime)
 (libraries kappa_terms kappa_connected)
 (public_name kappa-library.runtime)
 (flags
  (:standard
   -w
   @a
   -open
   Kappa_data_structures
   -open 
   Kappa_connected 
   -open
   Kappa_site_graphs
   -open
   Kappa_terms)))

; Generate resource_strings.ml with the content of some files

(rule
 (targets resource_strings.ml)
 (deps
  ../../dev/load_files_into_ocaml_string_vars.sh
  ../../gui/js_lib/flux.js
  ../../gui/js_lib/viz/common.js)
 (action
  (with-stdout-to
   %{targets}
   (run ocaml %{deps}))))
