(library
 (name kappa_symmetries)
 (libraries kappa_parameters kappa_cli)
 (flags
  (:standard)
  -open
  Kappa_grammar
  -open
  Kappa_terms
  -open
  Kappa_mixtures
  -open
  Kappa_parameters
  -open
  Kappa_generic_toolset
  -open
  Kappa_logging
  -open
  Kappa_cli
  -open
  Kappa_runtime
  -open
  Kappa_kasa_type_interface))
