opam-version: "2.0"
name: "pinned_libs"
version: "4.1~dev"
synopsis: "Pinned libs for the Kappa tool suite"
maintainer: [
  "Antoine Pouille <antoine.a.pouille@inria.fr>"
]
depends: [
  "atdgen" {= "2.15.0"}
  "atdgen-runtime" {= "2.15.0"}
  "cohttp-lwt-unix" {= "5.3.0"}
  "dune" {= "3.14.0"}
  "fmt" {= "0.9.0"}
  "js_of_ocaml" {= "5.7.0"}
  "js_of_ocaml-lwt" {= "5.7.0"}
  "js_of_ocaml-ppx" {= "5.7.0"}
  "js_of_ocaml-tyxml" {= "5.7.0"}
  "logs" {= "0.7.0"}
  "lwt" {= "5.7.0"}
  "lwt_react" {= "1.2.0"}
  "num" {= "1.5"}
  "re" {= "1.11.0"}
  "result" {= "1.5"}
  "stdlib-shims" {= "0.3.0"}
  "tyxml-ppx" {= "4.6.0"}
  "yojson" {= "2.1.0"}
         ]
