opam-version: "2.0"
name: "pinned_libs"
version: "4.1~dev"
synopsis: "Pinned libs for the Kappa tool suite"
maintainer: [
  "Antoine Pouille <antoine.a.pouille@inria.fr>"
]
depends: [
  "atdgen" {= "2.10.0"}
  "atdgen-runtime" {= "2.10.0"}
  "cohttp-lwt-unix" {= "5.0.0"}
  "dune" {= "3.5.0"}
  "fmt" {= "0.9.0"}
  "js_of_ocaml" {= "4.0.0"}
  "js_of_ocaml-lwt" {= "4.0.0"}
  "js_of_ocaml-ppx" {= "4.0.0"}
  "js_of_ocaml-tyxml" {= "4.0.0"}
  "logs" {= "0.7.0"}
  "lwt" {= "5.6.1"}
  "lwt_react" {= "1.2.0"}
  "num" {= "1.4"}
  "re" {= "1.10.4"}
  "result" {= "1.5"}
  "stdlib-shims" {= "0.3.0"}
  "tyxml-ppx" {= "4.5.0"}
  "yojson" {= "2.0.2"}
         ]
